net.certiv.fluentmark.core/src/main/java/net/certiv/fluentmark/core/md/parser/gen/MdParser.java
// Generated from D:/DevFiles/Eclipse/DslEditors/net.certiv.fluentmark/net.certiv.fluentmark.core/src/main/java/net/certiv/fluentmark/core/md/parser/MdParser.g4 by ANTLR 4.7.1

	package net.certiv.fluentmark.core.md.parser.gen;
	import net.certiv.fluentmark.core.md.parser.MdToken;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MdParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WORD=1, LINE=2, IMAGE=3, LINK=4, LINK_REF=5, INVS_COMMENT=6, HTML_COMMENT=7, 
		FRONT_MATTER=8, CODE_BLOCK_BT=9, CODE_BLOCK_TD=10, MATH_BLOCK=11, TEX_BEG=12, 
		HEADER=13, SEMARK=14, LIST_ITEM=15, QUOTE_BLOCK=16, DEFINE_BLOCK=17, HRULE=18, 
		TABLE_DEF=19, PIPE=20, UNICODE=21, ENTITY=22, TEX=23, HTML=24, INMATH=25, 
		URL=26, LBOLD=27, LITALIC=28, LSTRIKE=29, LSPAN=30, LQUOTE=31, LAPSTP=32, 
		RBOLD=33, RITALIC=34, RSTRIKE=35, RSPAN=36, RQUOTE=37, RAPSTP=38, REF=39, 
		TERM=40, LBRK=41, VWS=42, HWS=43, CHAR=44, ERR=45, LBRACE=46, HASH=47, 
		CHAR_ht=48, RBRACE=49, CLASS=50, ID=51, EQ=52, QUOTE=53, APSTP=54, CHAR_sd=55, 
		LINK_DEF=56, REF_DEF=57, RBRACK=58, RPAREN=59, CHAR_lk=60, CHAR_fm=61, 
		CHAR_bt=62, CHAR_btl=63, CHAR_td=64, CHAR_tdl=65, CHAR_mb=66, TEX_END=67, 
		CHAR_tb=68;
	public static final int
		RULE_page = 0, RULE_frontMatter = 1, RULE_header = 2, RULE_hrule = 3, 
		RULE_list = 4, RULE_listItem = 5, RULE_table = 6, RULE_tableDef = 7, RULE_tableRow = 8, 
		RULE_tableCell = 9, RULE_html = 10, RULE_codeBlock = 11, RULE_mathBlock = 12, 
		RULE_texBlock = 13, RULE_quote = 14, RULE_definition = 15, RULE_paragraph = 16, 
		RULE_link = 17, RULE_text = 18, RULE_word = 19, RULE_style = 20, RULE_attrLeft = 21, 
		RULE_attrRight = 22, RULE_content = 23, RULE_terminal = 24, RULE_comment = 25, 
		RULE_unknown = 26;
	public static final String[] ruleNames = {
		"page", "frontMatter", "header", "hrule", "list", "listItem", "table", 
		"tableDef", "tableRow", "tableCell", "html", "codeBlock", "mathBlock", 
		"texBlock", "quote", "definition", "paragraph", "link", "text", "word", 
		"style", "attrLeft", "attrRight", "content", "terminal", "comment", "unknown"
	};

	private static final String[] _LITERAL_NAMES = {
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WORD", "LINE", "IMAGE", "LINK", "LINK_REF", "INVS_COMMENT", "HTML_COMMENT", 
		"FRONT_MATTER", "CODE_BLOCK_BT", "CODE_BLOCK_TD", "MATH_BLOCK", "TEX_BEG", 
		"HEADER", "SEMARK", "LIST_ITEM", "QUOTE_BLOCK", "DEFINE_BLOCK", "HRULE", 
		"TABLE_DEF", "PIPE", "UNICODE", "ENTITY", "TEX", "HTML", "INMATH", "URL", 
		"LBOLD", "LITALIC", "LSTRIKE", "LSPAN", "LQUOTE", "LAPSTP", "RBOLD", "RITALIC", 
		"RSTRIKE", "RSPAN", "RQUOTE", "RAPSTP", "REF", "TERM", "LBRK", "VWS", 
		"HWS", "CHAR", "ERR", "LBRACE", "HASH", "CHAR_ht", "RBRACE", "CLASS", 
		"ID", "EQ", "QUOTE", "APSTP", "CHAR_sd", "LINK_DEF", "REF_DEF", "RBRACK", 
		"RPAREN", "CHAR_lk", "CHAR_fm", "CHAR_bt", "CHAR_btl", "CHAR_td", "CHAR_tdl", 
		"CHAR_mb", "TEX_END", "CHAR_tb"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MdParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MdParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PageContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MdParser.EOF, 0); }
		public List<CommentContext> comment() {
			return getRuleContexts(CommentContext.class);
		}
		public CommentContext comment(int i) {
			return getRuleContext(CommentContext.class,i);
		}
		public FrontMatterContext frontMatter() {
			return getRuleContext(FrontMatterContext.class,0);
		}
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public List<HruleContext> hrule() {
			return getRuleContexts(HruleContext.class);
		}
		public HruleContext hrule(int i) {
			return getRuleContext(HruleContext.class,i);
		}
		public List<ListContext> list() {
			return getRuleContexts(ListContext.class);
		}
		public ListContext list(int i) {
			return getRuleContext(ListContext.class,i);
		}
		public List<TableContext> table() {
			return getRuleContexts(TableContext.class);
		}
		public TableContext table(int i) {
			return getRuleContext(TableContext.class,i);
		}
		public List<HtmlContext> html() {
			return getRuleContexts(HtmlContext.class);
		}
		public HtmlContext html(int i) {
			return getRuleContext(HtmlContext.class,i);
		}
		public List<CodeBlockContext> codeBlock() {
			return getRuleContexts(CodeBlockContext.class);
		}
		public CodeBlockContext codeBlock(int i) {
			return getRuleContext(CodeBlockContext.class,i);
		}
		public List<MathBlockContext> mathBlock() {
			return getRuleContexts(MathBlockContext.class);
		}
		public MathBlockContext mathBlock(int i) {
			return getRuleContext(MathBlockContext.class,i);
		}
		public List<TexBlockContext> texBlock() {
			return getRuleContexts(TexBlockContext.class);
		}
		public TexBlockContext texBlock(int i) {
			return getRuleContext(TexBlockContext.class,i);
		}
		public List<QuoteContext> quote() {
			return getRuleContexts(QuoteContext.class);
		}
		public QuoteContext quote(int i) {
			return getRuleContext(QuoteContext.class,i);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public List<TerminalContext> terminal() {
			return getRuleContexts(TerminalContext.class);
		}
		public TerminalContext terminal(int i) {
			return getRuleContext(TerminalContext.class,i);
		}
		public List<ParagraphContext> paragraph() {
			return getRuleContexts(ParagraphContext.class);
		}
		public ParagraphContext paragraph(int i) {
			return getRuleContext(ParagraphContext.class,i);
		}
		public List<UnknownContext> unknown() {
			return getRuleContexts(UnknownContext.class);
		}
		public UnknownContext unknown(int i) {
			return getRuleContext(UnknownContext.class,i);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdParserVisitor ) return ((MdParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_page);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(54);
				comment();
				}
				break;
			}
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FRONT_MATTER) {
				{
				setState(57);
				frontMatter();
				}
			}

			setState(76);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					setState(74);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						setState(60);
						header();
						}
						break;
					case 2:
						{
						setState(61);
						hrule();
						}
						break;
					case 3:
						{
						setState(62);
						list();
						}
						break;
					case 4:
						{
						setState(63);
						table();
						}
						break;
					case 5:
						{
						setState(64);
						html();
						}
						break;
					case 6:
						{
						setState(65);
						codeBlock();
						}
						break;
					case 7:
						{
						setState(66);
						mathBlock();
						}
						break;
					case 8:
						{
						setState(67);
						texBlock();
						}
						break;
					case 9:
						{
						setState(68);
						quote();
						}
						break;
					case 10:
						{
						setState(69);
						definition();
						}
						break;
					case 11:
						{
						setState(70);
						terminal();
						}
						break;
					case 12:
						{
						setState(71);
						paragraph();
						}
						break;
					case 13:
						{
						setState(72);
						comment();
						}
						break;
					case 14:
						{
						setState(73);
						unknown();
						}
						break;
					}
					} 
				}
				setState(78);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FrontMatterContext extends ParserRuleContext {
		public List<TerminalNode> FRONT_MATTER() { return getTokens(MdParser.FRONT_MATTER); }
		public TerminalNode FRONT_MATTER(int i) {
			return getToken(MdParser.FRONT_MATTER, i);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public FrontMatterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_frontMatter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).enterFrontMatter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).exitFrontMatter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdParserVisitor ) return ((MdParserVisitor<? extends T>)visitor).visitFrontMatter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FrontMatterContext frontMatter() throws RecognitionException {
		FrontMatterContext _localctx = new FrontMatterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_frontMatter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(FRONT_MATTER);
			setState(82);
			content();
			setState(83);
			match(FRONT_MATTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode HEADER() { return getToken(MdParser.HEADER, 0); }
		public TerminalContext terminal() {
			return getRuleContext(TerminalContext.class,0);
		}
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public List<LinkContext> link() {
			return getRuleContexts(LinkContext.class);
		}
		public LinkContext link(int i) {
			return getRuleContext(LinkContext.class,i);
		}
		public List<TerminalNode> HASH() { return getTokens(MdParser.HASH); }
		public TerminalNode HASH(int i) {
			return getToken(MdParser.HASH, i);
		}
		public StyleContext style() {
			return getRuleContext(StyleContext.class,0);
		}
		public TerminalNode SEMARK() { return getToken(MdParser.SEMARK, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdParserVisitor ) return ((MdParserVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		int _la;
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case HEADER:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				match(HEADER);
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WORD) | (1L << IMAGE) | (1L << LINK) | (1L << UNICODE) | (1L << ENTITY) | (1L << TEX) | (1L << HTML) | (1L << INMATH) | (1L << URL) | (1L << LBOLD) | (1L << LITALIC) | (1L << LSTRIKE) | (1L << LSPAN) | (1L << LQUOTE) | (1L << LAPSTP) | (1L << REF))) != 0)) {
					{
					setState(88);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case WORD:
					case UNICODE:
					case ENTITY:
					case TEX:
					case HTML:
					case INMATH:
					case URL:
					case LBOLD:
					case LITALIC:
					case LSTRIKE:
					case LSPAN:
					case LQUOTE:
					case LAPSTP:
						{
						setState(86);
						text();
						}
						break;
					case IMAGE:
					case LINK:
					case REF:
						{
						setState(87);
						link();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(92);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==HASH) {
					{
					{
					setState(93);
					match(HASH);
					}
					}
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LBRACE) {
					{
					setState(99);
					style();
					}
				}

				setState(102);
				terminal();
				}
				break;
			case WORD:
			case IMAGE:
			case LINK:
			case SEMARK:
			case UNICODE:
			case ENTITY:
			case TEX:
			case HTML:
			case INMATH:
			case URL:
			case LBOLD:
			case LITALIC:
			case LSTRIKE:
			case LSPAN:
			case LQUOTE:
			case LAPSTP:
			case REF:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WORD) | (1L << IMAGE) | (1L << LINK) | (1L << UNICODE) | (1L << ENTITY) | (1L << TEX) | (1L << HTML) | (1L << INMATH) | (1L << URL) | (1L << LBOLD) | (1L << LITALIC) | (1L << LSTRIKE) | (1L << LSPAN) | (1L << LQUOTE) | (1L << LAPSTP) | (1L << REF))) != 0)) {
					{
					setState(105);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case WORD:
					case UNICODE:
					case ENTITY:
					case TEX:
					case HTML:
					case INMATH:
					case URL:
					case LBOLD:
					case LITALIC:
					case LSTRIKE:
					case LSPAN:
					case LQUOTE:
					case LAPSTP:
						{
						setState(103);
						text();
						}
						break;
					case IMAGE:
					case LINK:
					case REF:
						{
						setState(104);
						link();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(110);
				match(SEMARK);
				setState(111);
				terminal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HruleContext extends ParserRuleContext {
		public TerminalNode HRULE() { return getToken(MdParser.HRULE, 0); }
		public TerminalContext terminal() {
			return getRuleContext(TerminalContext.class,0);
		}
		public HruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hrule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).enterHrule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).exitHrule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdParserVisitor ) return ((MdParserVisitor<? extends T>)visitor).visitHrule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HruleContext hrule() throws RecognitionException {
		HruleContext _localctx = new HruleContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_hrule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(HRULE);
			setState(115);
			terminal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public TerminalContext terminal() {
			return getRuleContext(TerminalContext.class,0);
		}
		public List<ListItemContext> listItem() {
			return getRuleContexts(ListItemContext.class);
		}
		public ListItemContext listItem(int i) {
			return getRuleContext(ListItemContext.class,i);
		}
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).enterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).exitList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdParserVisitor ) return ((MdParserVisitor<? extends T>)visitor).visitList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(117);
				listItem();
				}
				}
				setState(120); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LIST_ITEM );
			setState(122);
			terminal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListItemContext extends ParserRuleContext {
		public TerminalNode LIST_ITEM() { return getToken(MdParser.LIST_ITEM, 0); }
		public List<TextContext> text() {
			return getRuleContexts(TextContext.class);
		}
		public TextContext text(int i) {
			return getRuleContext(TextContext.class,i);
		}
		public List<LinkContext> link() {
			return getRuleContexts(LinkContext.class);
		}
		public LinkContext link(int i) {
			return getRuleContext(LinkContext.class,i);
		}
		public ListItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).enterListItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).exitListItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdParserVisitor ) return ((MdParserVisitor<? extends T>)visitor).visitListItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListItemContext listItem() throws RecognitionException {
		ListItemContext _localctx = new ListItemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(LIST_ITEM);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WORD) | (1L << IMAGE) | (1L << LINK) | (1L << UNICODE) | (1L << ENTITY) | (1L << TEX) | (1L << HTML) | (1L << INMATH) | (1L << URL) | (1L << LBOLD) | (1L << LITALIC) | (1L << LSTRIKE) | (1L << LSPAN) | (1L << LQUOTE) | (1L << LAPSTP) | (1L << REF))) != 0)) {
				{
				setState(127);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case WORD:
				case UNICODE:
				case ENTITY:
				case TEX:
				case HTML:
				case INMATH:
				case URL:
				case LBOLD:
				case LITALIC:
				case LSTRIKE:
				case LSPAN:
				case LQUOTE:
				case LAPSTP:
					{
					setState(125);
					text();
					}
					break;
				case IMAGE:
				case LINK:
				case REF:
					{
					setState(126);
					link();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableContext extends ParserRuleContext {
		public TableRowContext hdr;
		public TableRowContext tableRow;
		public List<TableRowContext> rows = new ArrayList<TableRowContext>();
		public TableDefContext tableDef() {
			return getRuleContext(TableDefContext.class,0);
		}
		public TerminalContext terminal() {
			return getRuleContext(TerminalContext.class,0);
		}
		public List<TableRowContext> tableRow() {
			return getRuleContexts(TableRowContext.class);
		}
		public TableRowContext tableRow(int i) {
			return getRuleContext(TableRowContext.class,i);
		}
		public TableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).enterTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).exitTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdParserVisitor ) return ((MdParserVisitor<? extends T>)visitor).visitTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableContext table() throws RecognitionException {
		TableContext _localctx = new TableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			((TableContext)_localctx).hdr = tableRow();
			setState(133);
			tableDef();
			setState(135); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(134);
				((TableContext)_localctx).tableRow = tableRow();
				((TableContext)_localctx).rows.add(((TableContext)_localctx).tableRow);
				}
				}
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WORD) | (1L << IMAGE) | (1L << LINK) | (1L << PIPE) | (1L << UNICODE) | (1L << ENTITY) | (1L << TEX) | (1L << HTML) | (1L << INMATH) | (1L << URL) | (1L << LBOLD) | (1L << LITALIC) | (1L << LSTRIKE) | (1L << LSPAN) | (1L << LQUOTE) | (1L << LAPSTP) | (1L << REF))) != 0) );
			setState(139);
			terminal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableDefContext extends ParserRuleContext {
		public TerminalNode TABLE_DEF() { return getToken(MdParser.TABLE_DEF, 0); }
		public TableDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).enterTableDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).exitTableDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdParserVisitor ) return ((MdParserVisitor<? extends T>)visitor).visitTableDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableDefContext tableDef() throws RecognitionException {
		TableDefContext _localctx = new TableDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_tableDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(TABLE_DEF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TableRowContext extends ParserRuleContext {
		public List<TableCellContext> tableCell() {
			return getRuleContexts(TableCellContext.class);
		}
		public TableCellContext tableCell(int i) {
			return getRuleContext(TableCellContext.class,i);
		}
		public List<TerminalNode> PIPE() { return getTokens(MdParser.PIPE); }
		public TerminalNode PIPE(int i) {
			return getToken(MdParser.PIPE, i);
		}
		public TableRowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableRow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).enterTableRow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MdParserListener ) ((MdParserListener)listener).exitTableRow(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MdParserVisitor ) return ((MdParserVisitor<? extends T>)visitor).visitTableRow(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableRowContext tableRow() throws RecognitionException {
		TableRowContext _localctx = new TableRowContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_tableRow);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(143);
				match(PIPE);
				}
				break;
			}
			setState(146);
			tableCell();
			setState(149); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(147);
					match(PIPE);
					setState(148);
					tableCell();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(151); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(154);
			_errHandler.sync(this);
